add documentation swagger for list
