# handler/listOpenings.go
@@ -7,6 +7,17 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// @BasePath /api/v1
+
+// @Summary List opening
+// @Description List all job opening
+// @Tags Opening
+// @Accept json
+// @Produce json
+// @Succcess 200 {object} ListOpeningsResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 404 {object} ErrorResponse
+// @Router /tests [get]
 func ListOpeningHandler(ctx *gin.Context) {
 	openings := []schemas.Opening{}
 
